--- a/.github/ISSUE_TEMPLATE/1-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.yml
@@ -59,7 +59,7 @@ body:
     id: log_server
     attributes:
       label: "Server Log"
-      description: "Upload a copy of your *entire* server log: `/user/logs/server-<date>.log`."
+      description: "Upload a copy of your *entire* server log: `/user/logs/spt/spt.txt`."
       placeholder: "Attach the log file. Do not paste the contents."
     validations:
       required: true
