Add File validation (#344)
* Add file validation

* Revert "Added checks.dat build script (#343)"

This reverts commit 39228f88e705b58858d162256a5b5e10fe99148c.

* Update to use pwsh

* Wrap code in using

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 Server/user/
 SPTarkov.Server/user
 SPTarkov.Server/Assets
+Libraries/SPTarkov.Server.Assets/Assets/checks.dat
 
 # User-specific files
 *.rsuser
