Build hashfile only in release mode (#346)
* Update README to include Powershell requirement

* Build hashfile only in release, only check hashes in release mode

* Remove duplicate README

--- a/Libraries/SPTarkov.Server.Assets/SPTarkov.Server.Assets.csproj
+++ b/Libraries/SPTarkov.Server.Assets/SPTarkov.Server.Assets.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\Build.props"/>
 
@@ -25,7 +25,7 @@
     </Content>
   </ItemGroup>
 
-  <Target Name="PostBuildHashFile" AfterTargets="Build">
+  <Target Name="PostBuildHashFile" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'"> 
     <Exec Command="pwsh -NoProfile -ExecutionPolicy Bypass -File &quot;$(ProjectDir)PostBuild.ps1&quot;" />
   </Target>
 
