﻿Make ceciler cross platform (#375)
* ﻿Make ceciler cross platform

* Undo debug changes

--- a/Libraries/SPTarkov.Server.Core/SPTarkov.Server.Core.csproj
+++ b/Libraries/SPTarkov.Server.Core/SPTarkov.Server.Core.csproj
@@ -38,7 +38,7 @@
   </PropertyGroup>
 
   <Target Name="AfterEverythingDone" AfterTargets="PostBuildEvent">
-    <Exec ConsoleToMsBuild="true" Command="..\..\Ceciler\Ceciler.Launcher.exe $(OutDir)SPTarkov.Server.Core.dll ..\..\Patches\Ceciler.Virtualizer\bin\$(Configuration)\$(TargetFramework)\Ceciler.Virtualizer.dll" />
+    <Exec ConsoleToMsBuild="true" Command="dotnet ..\..\Ceciler\Ceciler.Launcher.dll $(OutDir)SPTarkov.Server.Core.dll ..\..\Patches\Ceciler.Virtualizer\bin\$(Configuration)\$(TargetFramework)\Ceciler.Virtualizer.dll" />
   </Target>
 
   <!--  Generates the ProgramStatics class with the build information -->
