Halloween even improvements All maps have at least 5% infection Improved dictionary access

--- a/Libraries/SPTarkov.Server.Assets/Assets/configs/seasonalevents.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/configs/seasonalevents.json
@@ -9688,9 +9688,17 @@
           "disableWaves": [],
           "enabled": true,
           "mapInfectionAmount": {
-            "Sandbox": 0,
-            "factory4": 0,
-            "laboratory": 100
+            "Sandbox": 5,
+            "factory4": 5,
+            "laboratory": 100,
+			"Woods": 5,
+			"bigmap": 5,
+			"Shoreline": 5,
+			"Interchange": 5,
+			"RezervBase": 5,
+			"laboratory": 5,
+			"Lighthouse": 5,
+			"TarkovStreets": 5
           }
         }
       },
