--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   dotnet-format:
+    if: "!contains(github.event.head_commit.message, '.NET Format Style Fixes')"
     runs-on: ubuntu-latest
     permissions:
       contents: write
